--- a/requirements-lite.txt
+++ b/requirements-lite.txt
@@ -8,6 +8,8 @@ numpy>=1.21.0
 # Audio processing
 librosa>=0.9.0
 soundfile>=0.11.0
+pydub>=0.25.0
+audioread>=3.0.0
 
 # Scientific computing
 scipy>=1.7.0
